# credit-risk

./: README.md  data_preprocessing.py  eda.ipynb  main.py  pyproject.toml  train_model.py
data/: credit_risk_dataset_cleaned.csv
mlruns/0/: meta.yaml
mlruns/226745146054589444/: meta.yaml
mlruns/226745146054589444/4aa4085fcaca4a0f908a5fc44c871fd9/: meta.yaml
mlruns/226745146054589444/4aa4085fcaca4a0f908a5fc44c871fd9/artifacts/: classification_report.txt
mlruns/226745146054589444/4aa4085fcaca4a0f908a5fc44c871fd9/artifacts/credit_risk_model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
mlruns/226745146054589444/4aa4085fcaca4a0f908a5fc44c871fd9/metrics/: f1_score  precision  recall
mlruns/226745146054589444/4aa4085fcaca4a0f908a5fc44c871fd9/tags/: mlflow.log-model.history  mlflow.runName
mlruns/226745146054589444/c730fe55650042e38b2bc6fe8b2515ee/: meta.yaml
mlruns/226745146054589444/c730fe55650042e38b2bc6fe8b2515ee/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/models/CreditRiskModel/: meta.yaml
mlruns/models/CreditRiskModel/version-1/: meta.yaml
notebooks/: modelisation.ipynb
