[project]
name = "credit-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "fastapi>=0.115.4",
    "ipykernel>=6.29.5",
    "mlflow>=2.17.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.39.0",
]
